--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,19 @@
 
 <h1 id="this-is-me">This is me</h1>
 
-<p><img width="200" class="special-img-class" src="/nam_and_chimai.jpg" /></p>
+<p>My name is Nam. I am a programmer living in the Paris area. Programming is my passion.</p>
+
+<p>I&rsquo;ve started my developer career with Visual Basic back in 2008. This is a horrible language</p>
+
+<p>2012, I&rsquo;ve got a job in the bank writing code in C++. The language is fine, but the legacy code was bad.</p>
+
+<p>2013, I&rsquo;ve made a jump into Python, one of my favorite language. I could not imagine how the choice of language can improve significantly the productivity</p>
+
+<p>2015, After mastering python, I&rsquo;ve read a <a href="https://stackoverflow.com/questions/2573135/python-progression-path-from-apprentice-to-guru">question</a> to see what I need to learn in order to make progress in my skill. And the answer is at the level 7: Read Real World Haskell. I&rsquo;ve started to learn Haskell and I was humiliated by how little I know about programming. And the world of functional programming is opend up to me. I rediscovered Lisp, Racket and Clojure.</p>
+
+<p>2015, I decided to jump to a job to use a functional programming language. At this time, the only language I can find for a job out there is Scala, and the big data was coming like a fesh air to the IT industry.</p>
+
+<p>I feel very lucky to work in the IT industry because the learning process never ends. This is a place I want to share my knowledge and try to explain some of my opinions</p>
 </div><div class="section bottom-menu"><hr/><p><a href="/about">About</a>
 
 
